Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66897

XCB: Removal of cursor cache caused a big performance regression with many native windows

XMLWordPrintable

      The patch in question:
      https://codereview.qt-project.org/#/c/170426/

      This leads to a very bad performance regression with X11 forwarding, tested around 10 times slower than with the patch reverted. Even locally I can see it increases time taken with the attached test case from 300ms (patch reverted) to 830ms.

        1. qtbug66897.tar.gz
          0.7 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-66897
        # Subject Branch Project Status CR V

            paeglis Gatis Paeglis
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes